src/objects/Recruiting_Contact__c.object
<CustomObject>
    <description>Contact within a recruiting organization.</description>
    <fields>
        <fullName>Address_City__c</fullName>
        <label>Address City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Country__c</fullName>
        <label>Address Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United States (US)</fullName>
                </value>
                <value>
                    <fullName>Afghanistan (AF)</fullName>
                </value>
                <value>
                    <fullName>Åland Islands (AX)</fullName>
                </value>
                <value>
                    <fullName>Albania (AL)</fullName>
                </value>
                <value>
                    <fullName>Algeria (DZ)</fullName>
                </value>
                <value>
                    <fullName>American Samoa (AS)</fullName>
                </value>
                <value>
                    <fullName>Andorra (AD)</fullName>
                </value>
                <value>
                    <fullName>Angola (AO)</fullName>
                </value>
                <value>
                    <fullName>Anguilla (AI)</fullName>
                </value>
                <value>
                    <fullName>Antarctica (AQ)</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda (AG)</fullName>
                </value>
                <value>
                    <fullName>Argentina (AR)</fullName>
                </value>
                <value>
                    <fullName>Armenia (AM)</fullName>
                </value>
                <value>
                    <fullName>Aruba (AW)</fullName>
                </value>
                <value>
                    <fullName>Ascension Island (AC)</fullName>
                </value>
                <value>
                    <fullName>Australia (AU)</fullName>
                </value>
                <value>
                    <fullName>Austria (AT)</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan (AZ)</fullName>
                </value>
                <value>
                    <fullName>Bahamas (BS)</fullName>
                </value>
                <value>
                    <fullName>Bahrain (BH)</fullName>
                </value>
                <value>
                    <fullName>Bangladesh (BD)</fullName>
                </value>
                <value>
                    <fullName>Barbados (BB)</fullName>
                </value>
                <value>
                    <fullName>Belarus (BY)</fullName>
                </value>
                <value>
                    <fullName>Belgium (BE)</fullName>
                </value>
                <value>
                    <fullName>Belize (BZ)</fullName>
                </value>
                <value>
                    <fullName>Benin (BJ)</fullName>
                </value>
                <value>
                    <fullName>Bermuda (BM)</fullName>
                </value>
                <value>
                    <fullName>Bhutan (BT)</fullName>
                </value>
                <value>
                    <fullName>Bolivia (BO)</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius, and Saba (BQ)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_State__c</fullName>
        <label>Address State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_Street_1__c</fullName>
        <label>Address Street 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Street_2__c</fullName>
        <label>Address Street 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Zip_Code__c</fullName>
        <label>Address Zip Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Recruiting_Contact_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recruiting Contact Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruiting_Organization__c</fullName>
        <label>Recruiting Organization</label>
        <referenceTo>Recruiting_Organization__c</referenceTo>
        <relationshipLabel>Recruiting Contacts</relationshipLabel>
        <relationshipName>Recruiting_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Recruiting Contact</label>
    <nameField>
        <label>Recruiting Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recruiting Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>